{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 43,
  "lineage": "5b266876-ec43-31f0-fd27-e6f4723ab80e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "FarmecAPI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:773556241442:instance/i-07990d63d03ec8ec3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07990d63d03ec8ec3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0573dcc2c77714fab",
            "private_dns": "ip-10-0-1-25.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-34-241-171-24.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.171.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f5bfa9c10b7a60c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b880b7541a69e4e6",
            "tags": {
              "Name": "FarmecAPI"
            },
            "tags_all": {
              "Name": "FarmecAPI"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065a8bdfc47d5dfb1"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_subnet.farmec_subnet",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "farmec_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:internet-gateway/igw-0ad2466213d2ce604",
            "id": "igw-0ad2466213d2ce604",
            "owner_id": "773556241442",
            "tags": {
              "Name": "farmec_igw"
            },
            "tags_all": {
              "Name": "farmec_igw"
            },
            "vpc_id": "vpc-0a5c2a102e223ee70"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "farmec_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:773556241442:loadbalancer/app/farmec-loadbalancer/6a944884bc62587e",
            "arn_suffix": "app/farmec-loadbalancer/6a944884bc62587e",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "farmec-loadbalancer-496938100.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:773556241442:loadbalancer/app/farmec-loadbalancer/6a944884bc62587e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "farmec-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0801c8df48fab6b18"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b6295d9bb0a42d9"
              },
              {
                "subnet_id": "subnet-0b880b7541a69e4e6"
              }
            ],
            "subnets": [
              "subnet-01b6295d9bb0a42d9",
              "subnet-0b880b7541a69e4e6"
            ],
            "tags": {
              "Name": "farmec-loadbalancer"
            },
            "tags_all": {
              "Name": "farmec-loadbalancer"
            },
            "vpc_id": "vpc-0a5c2a102e223ee70",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.my_alb_sg",
            "aws_subnet.farmec_subnet",
            "aws_subnet.farmec_subnet_2",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:773556241442:listener/app/farmec-loadbalancer/6a944884bc62587e/c277f882bc9b8d5d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:773556241442:targetgroup/my-tg/7a2ee03655f605f2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:773556241442:listener/app/farmec-loadbalancer/6a944884bc62587e/c277f882bc9b8d5d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:773556241442:loadbalancer/app/farmec-loadbalancer/6a944884bc62587e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.farmec_loadbalancer",
            "aws_lb_target_group.my_tg",
            "aws_security_group.my_alb_sg",
            "aws_subnet.farmec_subnet",
            "aws_subnet.farmec_subnet_2",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:773556241442:targetgroup/my-tg/7a2ee03655f605f2",
            "arn_suffix": "targetgroup/my-tg/7a2ee03655f605f2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:773556241442:targetgroup/my-tg/7a2ee03655f605f2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a5c2a102e223ee70"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "farmec_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:route-table/rtb-0cdf6bed179432674",
            "id": "rtb-0cdf6bed179432674",
            "owner_id": "773556241442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad2466213d2ce604",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "farmec_route_table"
            },
            "tags_all": {
              "Name": "farmec_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5c2a102e223ee70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.farmec_igw",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09918051dddfe300d",
            "route_table_id": "rtb-0cdf6bed179432674",
            "subnet_id": "subnet-0b880b7541a69e4e6"
          },
          "dependencies": [
            "aws_internet_gateway.farmec_igw",
            "aws_route_table.farmec_route_table",
            "aws_subnet.farmec_subnet",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000424a4dbb48a909",
            "route_table_id": "rtb-0cdf6bed179432674",
            "subnet_id": "subnet-01b6295d9bb0a42d9"
          },
          "dependencies": [
            "aws_internet_gateway.farmec_igw",
            "aws_route_table.farmec_route_table",
            "aws_subnet.farmec_subnet_2",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007eb13936f9746f7",
            "route_table_id": "rtb-0cdf6bed179432674",
            "subnet_id": "subnet-0a7b12cecd4160d69"
          },
          "dependencies": [
            "aws_internet_gateway.farmec_igw",
            "aws_route_table.farmec_route_table",
            "aws_subnet.farmec_subnet_3",
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:security-group/sg-0801c8df48fab6b18",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0801c8df48fab6b18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_alb_sg",
            "name_prefix": "",
            "owner_id": "773556241442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_alb_sg"
            },
            "tags_all": {
              "Name": "my_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5c2a102e223ee70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:security-group/sg-00dc7580b576a5595",
            "description": "Security Group for RDS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dc7580b576a5595",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "773556241442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sg"
            },
            "tags_all": {
              "Name": "my_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5c2a102e223ee70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "farmec_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:subnet/subnet-0b880b7541a69e4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b880b7541a69e4e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773556241442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "farmec_subnet"
            },
            "tags_all": {
              "Name": "farmec_subnet"
            },
            "vpc_id": "vpc-0a5c2a102e223ee70"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "farmec_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:subnet/subnet-01b6295d9bb0a42d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b6295d9bb0a42d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773556241442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "farmec_subnet_2"
            },
            "tags_all": {
              "Name": "farmec_subnet_2"
            },
            "vpc_id": "vpc-0a5c2a102e223ee70"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "farmec_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:subnet/subnet-0a7b12cecd4160d69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7b12cecd4160d69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773556241442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "farmec_subnet_3"
            },
            "tags_all": {
              "Name": "farmec_subnet_3"
            },
            "vpc_id": "vpc-0a5c2a102e223ee70"
          },
          "dependencies": [
            "aws_vpc.farmec_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "farmec_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:773556241442:vpc/vpc-0a5c2a102e223ee70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aefb5529762ef671",
            "default_route_table_id": "rtb-0fca89597725008c7",
            "default_security_group_id": "sg-065a8bdfc47d5dfb1",
            "dhcp_options_id": "dopt-073ddfe55371cbd60",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5c2a102e223ee70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fca89597725008c7",
            "owner_id": "773556241442",
            "tags": {
              "Name": "farmec_vpc"
            },
            "tags_all": {
              "Name": "farmec_vpc"
            }
          }
        }
      ]
    }
  ]
}